@@ -12,6 +12,8 @@
     iPhone simulator and i386 on OS X platforms.
   * Fixed a bug where `:cflags' for `:static' vendored projects could not
     override those set by the toolchain by default. E.g. `-fno-modules'.
+  * [iOS] Removed `Symbols not found...' message when app will be deployed into
+    iOS device if Xcode dumped device symbols into user directory.
 
 = RubyMotion 2.37 =
 
